core/unpackaged/main/default/objects/ZVC__Zoom_Event_Attendee__c/ZVC__Zoom_Event_Attendee__c.object-meta.xml
<CustomObject>
    <label>Zoom Event Attendee</label>
    <nameField>
        <displayFormat>Zoom-Event-Attendee-{0000}</displayFormat>
        <label>Event Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Event Attendees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>