core/unpackaged/main/default/objects/ZVC__Zoom_Event_Attendee__c/fields/ZVC__Attended_Duration__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Attended_Duration__c</fullName>
    <label>Attended Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>