core/unpackaged/main/default/objects/ZVC__Zoom_Event_Attendee__c/fields/ZVC__Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Attendee_Name__c</fullName>
    <label>Attendee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>