core/unpackaged/main/default/objects/ZVC__Zoom_Event_Attendee__c/fields/ZVC__Live_Stream_View_Duration__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Live_Stream_View_Duration__c</fullName>
    <label>Live Stream View Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>