core/unpackaged/main/default/objects/ZVC__Zoom_Event_Attendee__c/fields/ZVC__Session_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zoom Meeting</fullName>
            </value>
            <value>
                <fullName>Zoom Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>