core/unpackaged/main/default/objects/ZVC__Zoom_Event_Attendee__c/fields/ZVC__Zoom_Event_Registrant__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Event_Registrant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Event Registrant</label>
    <referenceTo>ZVC__Zoom_Event_Registrant__c</referenceTo>
    <relationshipLabel>Zoom Event Attendee</relationshipLabel>
    <relationshipName>Zoom_Event_Attendee</relationshipName>
    <type>Lookup</type>
</CustomField>