core/unpackaged/main/default/objects/ZVC__Zoom_Event_Attendee__c/fields/ZVC__Zoom_Meeting__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Meeting</label>
    <referenceTo>ZVC__Zoom_Meeting__c</referenceTo>
    <relationshipLabel>Zoom Event Attendees</relationshipLabel>
    <relationshipName>Attended_Meeting</relationshipName>
    <type>Lookup</type>
</CustomField>